--- a/app/views/camp_applications/next_steps.html.haml
+++ b/app/views/camp_applications/next_steps.html.haml
@@ -4,7 +4,7 @@
 		.row
 			.col-6
 				.row.p-2
-					= link_to "Go Back", edit_camp_camp_application_camp_application_covid_path(@camp, @application, @application.camp_application_covid), class: "btn btn-secondary btn-lg", role: "button"
+					= link_to "Go Back", :back, class: "btn btn-secondary btn-lg", role: "button"
 				-#.col-6
 					-#.row.p-2
 						-#= f.submit "Continue", class: "btn btn-primary btn-lg"
