--- a/app/views/camp_application_c3s/_form.html.haml
+++ b/app/views/camp_application_c3s/_form.html.haml
@@ -7,7 +7,7 @@
 		%p DBRIB has a zero tolerance policy for alcohol and illegal drugs. Individuals attending or volunteering at the DeafBlind Retreat at Isola Bella must not bring alcohol or illegal drugs into the retreat, come onto the retreat grounds while intoxicated, or smoke in non-designated smoking areas. Anyone who breaks this policy will be asked to leave the retreat immediately, and no refund will be given.
 
 		= form_with(model: [camp, application, c3]) do |f|
-			%fieldset.border.border-dark.ps-4.pe-4.pt-4.mb-4
+			.fieldset.required.border.border-dark.ps-4.pe-4.pt-4.mb-4
 				%legend I have read and agree to follow the policies set by DBRIB.
 
 				.row.mb-4
@@ -25,7 +25,7 @@
 			.row
 				.col-6
 					.row.p-2
-						= link_to "Go Back", edit_camp_camp_application_camp_application_emergency_path(@camp, @application, @application.camp_application_emergency), class: "btn btn-secondary btn-lg", role: "button"
+						= link_to "Go Back", new_camp_camp_application_path(@camp, @application), class: "btn btn-secondary btn-lg", role: "button"
 				.col-6
 					.row.p-2
 						= f.submit "Continue", class: "btn btn-primary btn-lg"
