--- a/app/views/camp_application_meals/_form.html.haml
+++ b/app/views/camp_application_meals/_form.html.haml
@@ -3,7 +3,7 @@
 		%h1 Meals
 
 		= form_with(model: [camp, application, meal]) do |f|
-			%fieldset.border.border-dark.ps-4.pe-4.pt-4.mb-4
+			.fieldset.border.border-dark.ps-4.pe-4.pt-4.mb-4
 				%legend What dietary lifestyle do you follow?
 
 				.row.mb-4
@@ -13,7 +13,7 @@
 							- symlabel = ("dietary_lifestyle_" + lifestyle.first).to_sym
 							= f.label symlabel, lifestyle.last, class: "btn btn-outline-dark btn-lg text-start"
 			
-			%fieldset.border.border-dark.ps-4.pe-4.pt-4.mb-4
+			.fieldset.border.border-dark.ps-4.pe-4.pt-4.mb-4
 				%legend Do you have any of the following food allergens or sensitivities?  (You can select more than one)
 
 				.row.mb-4
@@ -22,7 +22,7 @@
 							= f.check_box :allergens, { multiple: true, class: "btn-check" }, allergen.first, false
 							= f.label :allergens, allergen.last, value: allergen.first, class: "btn btn-outline-dark btn-lg text-start"
 
-			%fieldset.border.border-dark.ps-4.pe-4.pt-4.mb-4
+			.fieldset.border.border-dark.ps-4.pe-4.pt-4.mb-4
 				.form-group.mb-4
 					%legend
 						= f.label :dietary_restrictions, "Do you have any other dietary restrictions?  If yes, please explain."
@@ -31,7 +31,7 @@
 			.row
 				.col-6
 					.row.p-2
-						= link_to "Go Back", edit_camp_camp_application_camp_application_lodging_path(@camp, @application, @application.camp_application_lodging), class: "btn btn-secondary btn-lg", role: "button"
+						= link_to "Go Back", new_camp_camp_application_camp_application_lodging_path(@camp, @application), class: "btn btn-secondary btn-lg", role: "button"
 				.col-6
 					.row.p-2
 						= f.submit "Continue", class: "btn btn-primary btn-lg"
