--- a/app/views/camps/index.html.haml
+++ b/app/views/camps/index.html.haml
@@ -5,3 +5,5 @@
 
 	- @camps.each do |camp|
 		%h2 #{link_to camp.title, camp_path(camp)}
+		%p.text-muted From #{camp.start.in_time_zone.strftime("%A, %B %d, %Y %l:%M %p")} to #{camp.end.strftime("%A, %B %d, %Y %l:%M %p (%Z)")}
+		
