--- a/app/views/camps/show.html.haml
+++ b/app/views/camps/show.html.haml
@@ -2,8 +2,7 @@
 	.col-md-8.mx-auto
 		%h1 #{@camp.title}
 
-		- Time.use_zone("Eastern Time (US & Canada)") do
-			%p.text-muted From #{@camp.start.strftime("%A, %B %d, %Y %l:%M %p")} to #{@camp.end.strftime("%A, %B %d, %Y %l:%M %p (%Z)")}
+		%p.text-muted From #{@camp.start.in_time_zone.strftime("%A, %B %d, %Y %l:%M %p")} to #{@camp.end.strftime("%A, %B %d, %Y %l:%M %p (%Z)")}
 		
 		.row.mb-4
 			.col-md-4.d-grid.d-block
