--- a/app/views/camp_application_c3s/_form.html.haml
+++ b/app/views/camp_application_c3s/_form.html.haml
@@ -2,10 +2,10 @@
 	.col-md-8.mx-auto
 		%h1 Communication and Code of Conduct
 
-		%p DeafBlind Retreat at Isola Bella (DBRIB) respects all kinds of communication preferences. Since all participants have some combined degree of hearing loss and vision loss, communication modes may include spoken language, sign language, use of assistive devices, or a combination of all. All volunteers and workers at the retreat will strive to use the communication mode or modes preferred by the DeafBlind individual. The retreat's goal is for inclusion of all participants. 
-		
-		%p DBRIB has a zero tolerance policy for alcohol and illegal drugs. Individuals attending or volunteering at the DeafBlind Retreat at Isola Bella must not bring alcohol or illegal drugs into the retreat, nor come onto the retreat grounds while under the influence.  In addition, as Isola Bella is operated by the American School for the Deaf, smoking will not be permitted anywhere on the island.. Anyone who breaks this policy will be asked to leave the retreat immediately, and no refund will be given.
-		
+		%p the DeafBlind Retreat at Isola Bella (DBRIB) respects all kinds of communication preferences. Since all participants have some combined degree of hearing and vision loss, communication modes may include spoken language, sign language, use of assistive devices, or a combination thereof. All volunteers and staff members at the Retreat will strive to use the communication mode or modes preferred by the DeafBlind individual.  DBRIB also respects people of all walks of life and backgrounds. All participants, volunteers, and staff members will respect one another's sexual orientation, gender identity, race, ethnicity, national origin, age, and religious affilitations or any other legally protected characteristics. The Retreat's goal is for inclusion of all participants.
+
+		%p DBRIB has a zero-tolerance policy for alcohol and substances prohibited by law. Individuals attending or volunteering at the DeafBlind Retreat at Isola Bella must not bring alcohol or any substance probhibited by law into the Retreat, nor come onto the Retreat grounds while under the influence.  In addition, as Isola Bella is operated by the American School for the Deaf, smoking will not be permitted anywhere on the island. DBRIB also has a zero-tolerance policy for harassment based upon an individual's sexual orientation, gender identity, race, ethnicity, national origin, age, religious affilitation or any other legally protected characteristics. Anyone who breaks any of these policies will be asked to leave the retreat immediately, and no refund will be given.
+
 		= form_with(model: [camp, application, c3]) do |f|
 			.fieldset.required.border.border-dark.ps-4.pe-4.pt-4.mb-4
 				%legend I have read and agree to follow the policies set by DBRIB.
