--- a/app/views/camps/index.html.haml
+++ b/app/views/camps/index.html.haml
@@ -1,8 +1,9 @@
 .container.mt-4
 	%h1 Camps and Retreats
 
-	= link_to "New Camp or Retreat", new_camp_path
-
+	- if current_user&.admin?
+		= link_to "New Camp or Retreat", new_camp_path
+		
 	- @camps.each do |camp|
 		%h2 #{link_to camp.title, camp_path(camp)}
 		%p.text-muted From #{camp.start.in_time_zone.strftime("%A, %B %d, %Y %l:%M %p")} to #{camp.end.strftime("%A, %B %d, %Y %l:%M %p (%Z)")}
