--- a/app/views/camps/show.html.haml
+++ b/app/views/camps/show.html.haml
@@ -7,10 +7,11 @@
 		.row.mb-4
 			.col-md-4.d-grid.d-block
 				= link_to "Apply Now", new_camp_camp_application_path(@camp), class: "btn btn-primary btn-lg"
-			.col-md-4.d-grid.d-block
-				= link_to "Edit", edit_camp_path(@camp), class: "btn btn-secondary btn-lg"
-			.col-md-4.d-grid.d-block
-				= button_to "Delete", camp_path(@camp), form: { data: { turbo:false }}, method: :delete, class: "btn btn-danger btn-lg"
+			- if current_user&.admin?
+				.col-md-4.d-grid.d-block
+					= link_to "Edit", edit_camp_path(@camp), class: "btn btn-secondary btn-lg"
+				.col-md-4.d-grid.d-block
+					= button_to "Delete", camp_path(@camp), form: { data: { turbo:false }}, method: :delete, class: "btn btn-danger btn-lg"
 
 		
 
